--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -1,6 +1,6 @@
 {
     "MY_PROGRESS": "My Progress",
-    "LOADING_POSTS": "Loading posts",
+    "LOADING": "Loading",
     "LOGOUT": "Logout",
     "FORM_IMAGE": "Green field with sun and with one person helping another",
     "EMAIL": "Email",
