Sign in form - multiple fix

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -8,7 +8,7 @@
     "PASSWORD": "Password",
     "TYPE_PASSWORD": "Type your password",
     "SIGN_IN": "Sign in",
-    "PEACE_IMAGE": "",
+    "PEACE_IMAGE": "Peaceful image",
     "BOARD": "Board",
     "PROFILE": "Profile",
     "AGENDA": "Agenda",
